286
Seems to work now. The current compiler (2.7.1.RC1) gives a nice error message:
```scala
t0396.scala:11: error: 'this' expected but 'val' found.
      val someTime = 1000
      ^
```

the same is true for the (new) eclipse plugin.
